# libidevices-support

./: .gitignore  CMakeLists.txt
include/: array.h
src/: array.c  array.h  debug.c  userpref.c  utils.c
test/: array_test.c
